code cleaning and ci